Incorrect check, and added temp test

--- a/ptree_loadable_module/Makefile
+++ b/ptree_loadable_module/Makefile
@@ -3,6 +3,6 @@ CONFIG_MODULE_SIG=n
 KDIR ?= ..
 
 kbuild:
-	make -C $(KDIR) M=`pwd`
+	make -C $(KDIR) M=`pwd` modules_install
 clean:
 	make -C $(KDIR) M=`pwd` clean
