This is works before adding lock

--- a/ptree_loadable_module/Makefile
+++ b/ptree_loadable_module/Makefile
@@ -3,6 +3,11 @@ CONFIG_MODULE_SIG=n
 KDIR ?= ..
 
 kbuild:
-	make -C $(KDIR) M=`pwd` modules_install
+	make -C $(KDIR) M=`pwd` modules
+	mkdir -p /lib/modules/5.4.0-custom+/extra
+	rm -f /lib/modules/5.4.0-custom+/extra/ptree_loadable_module.ko
+	cp /data/ubuntu/linux/ptree_loadable_module/ptree_loadable_module.ko /lib/modules/5.4.0-custom+/extra/
+	depmod
+	modprobe -r ptree_loadable_module
 clean:
 	make -C $(KDIR) M=`pwd` clean
